# fluffy-fishstick

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  start.sh
app/: bot.py  cache.py  configs.py  main.py  scheduler.py
app/clients/: kucoin_api.py  kucoin_ws.py
app/db/: crud_triggers.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 202305142026-22201248c0fb_initial_migration.py  202305152114-697771f5b2ff_update_fields_names.py  202305160556-1aaece15756a_update_transactions_max_count_field.py  202305231403-ba092c65fbd8_add_trigger__side.py
app/managers/: triggers_manager.py
app/modules/: amqp.py  bot.py  bot_router.py  cache.py  scheduler.py  ws_server.py
app/modules/clients/: kucoin_api.py  kucoin_ws.py
app/routers/: account.py  dashboard.py  detector.py  market.py  system.py
app/utils/: dependencies.py  enums.py  helpers.py  logger.py  schemas.py  tasks.py
