[tool.poetry]
name = "kucoin"
version = "0.1.0"
description = ""
authors = ["jeishod <jeishod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["python-dotenv"], version = "^0.95.1"}
uvicorn = "^0.22.0"
httpx = "^0.24.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
websockets = "^11.0.2"
alembic = "^1.10.4"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
python-dateutil = "^2.8.2"
aiogram = {version = "^3.0.0b7", allow-prereleases = true}
redis = "^4.5.5"
itsdangerous = "^2.1.2"
orjson = "^3.8.12"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[tool.flake8]
max-line-length = 120
max-complexity = 10

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2

[tool.black]
line-length = 120
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
